k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: czl-test
  labels:
    name: czl-test
    app: lctmr-system
