k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: lctmr-backend-service
  namespace: czl-test
  labels:
    app: lctmr-backend
spec:
  type: ClusterIP
  selector:
    app: lctmr-backend
  ports:
  - name: http
    port: 3001
    targetPort: 3001
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: lctmr-frontend-service
  namespace: czl-test
  labels:
    app: lctmr-frontend
spec:
  type: ClusterIP
  selector:
    app: lctmr-frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
